Gtk-3.22&4.0: [Gnome-recipes] Fix some minor issues
* Fix circular roundness in text-button in actionbar node.
* Change 'heading' label colour to selection-colour like Gnome-calendar.
* Fix unwanted 'shadow truncation' of flowbox-childs by adding
  bottom margins.

--- a/gtk/sass/3.22/_common.scss
+++ b/gtk/sass/3.22/_common.scss
@@ -1937,6 +1937,11 @@ actionbar {
       background-color: transparent;
       color: $insensitive_secondary_fg_color;
     }
+
+    &.text-button { // revert to square
+      border-radius: 2px;
+      -gtk-outline-radius: 2px;
+    }
   }
 
   // override circular outlines
