--- a/gtk/sass/4.0/_common.scss
+++ b/gtk/sass/4.0/_common.scss
@@ -1866,6 +1866,11 @@ actionbar {
       background-color: transparent;
       color: $insensitive_secondary_fg_color;
     }
+
+    &.text-button { // revert to square
+      border-radius: 2px;
+      -gtk-outline-radius: 2px;
+    }
   }
 
   // override circular outlines
